<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1"
    style="@style/AppTheme">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainTitle"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="10dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myAppName1"
            android:id="@+id/myAppButton1"
            android:layout_gravity="center_horizontal"
            android:onClick="launchMyApp"
            style="@style/btnStyleBlue" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myAppName2"
            android:id="@+id/myAppButton2"
            android:layout_gravity="center_horizontal"
            android:onClick="launchMyApp"
            style="@style/btnStyleBlue" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myAppName3"
            android:id="@+id/myAppButton3"
            android:layout_gravity="center_horizontal"
            android:onClick="launchMyApp"
            style="@style/btnStyleBlue"  />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myAppName4"
            android:id="@+id/myAppButton4"
            android:layout_gravity="center_horizontal"
            android:onClick="launchMyApp"
            style="@style/btnStyleBlue"  />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myAppName5"
            android:id="@+id/myAppButton5"
            android:layout_gravity="center_horizontal"
            android:onClick="launchMyApp"
            style="@style/btnStyleBlue"  />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myAppName6"
            android:id="@+id/myAppButton6"
            android:layout_gravity="center_horizontal"
            android:onClick="launchMyApp"
            style="@style/btnStyleBlue"  />
    </LinearLayout>
    </ScrollView>

</LinearLayout>
